h1. CHANGELOG

h2. 2.2.21 unreleased

* update gem 'capybara' to 2.0.1
* update 'saas' recipe to add Cucumber test

h2. 2.2.20 December 7, 2012

* revert 'Bundler.with_clean_env' (fix https://github.com/RailsApps/rails-composer/issues/54)

h2. 2.2.19 December 7, 2012

* fix issue #137: when a .railsrc file specifies a database gem, do not add it again
* remove 'bundle update' (unnecessary) and add 'Bundler.with_clean_env do' to avoid gem clashes
* add view helper 'display_base_errors' to accommodate SimpleForm
* update 'saas' recipe to add Rspec and Cucumber tests
* fix 'saas' recipe to add missing file for RSpec tests
* update gem 'ruby_parser' to 3.1.0
* update gem 'zurb-foundation' to 3.2.3
* update gem 'devise_invitable' to 1.1.4
* update gem 'therubyracer' to 0.11.0
* update gem 'twitter-bootstrap-rails' to 2.1.7
* update gem 'mongoid-rspec' to 1.5.5
* update gem 'capybara' to 1.1.4
* update gem 'mongoid' to 3.0.14

h2. 2.2.18 November 8, 2012

* fix 'gems' recipe to include 'database_cleaner' gem when RSpec is selected without Cucumber
* fix 'gems' recipe to add the 'less-rails' gem to accommodate changes to the' twitter-bootstrap-rails' gem
* fix 'views' recipe for 'admin_app' when 'simple_form' is not selected
* fix 'init' recipe for 'admin_app' when 'mongoid' is selected
* fix 'controllers' recipe so OmniAuth can be used with SQL databases as well as Mongoid
* update gem 'mongoid' to 3.0.11
* update gem 'capybara' to 1.1.3
* update gem 'email_spec' to 1.4.0
* update gem 'twitter-bootstrap-rails' to 2.1.6
* update gem 'bootstrap-sass' to 2.1.1.0
* update gem 'ruby_parser' to 3.0.1
* update gem 'jquery-datatables-rails' to 1.11.2

h2. 2.2.17 October 27, 2012

* add '-t' flag to substitute local templates (contributed by Clinton N. Dreisbach)
* add '-L' flag to clear the default recipes so only local recipes are available (contributed by Clinton N. Dreisbach)