@@ -27,6 +27,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'admin_app'
     prefs[:form_builder] = 'simple_form'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails-prelaunch-signup'
     prefs[:git] = true
     prefs[:database] = 'sqlite'
@@ -42,6 +43,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'admin_app'
     prefs[:form_builder] = 'simple_form'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
     if prefer :git, true
       prefs[:prelaunch_branch] = multiple_choice "Git branch for the prelaunch app?", [["wip (work-in-progress)", "wip"], ["master", "master"], ["prelaunch", "prelaunch"], ["staging", "staging"]]
       if prefs[:prelaunch_branch] == 'master'
@@ -65,6 +67,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'admin_app'
     prefs[:form_builder] = 'simple_form'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails3-devise-rspec-cucumber'
     prefs[:git] = true
     prefs[:database] = 'sqlite'
@@ -79,6 +82,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails3-devise-rspec-cucumber-fabrication'
     prefs[:git] = true
     prefs[:database] = 'sqlite'
@@ -93,6 +97,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails3-mongoid-devise'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -108,6 +113,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails3-mongoid-omniauth'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -123,6 +129,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
   when 'rails3-subdomains'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -138,6 +145,7 @@ case prefs[:railsapps]
     prefs[:starter_app] = 'subdomains_app'
     prefs[:form_builder] = 'none'
     prefs[:quiet_assets] = true
+    prefs[:better_errors] = true
 end
 
 __END__
