@@ -86,6 +86,7 @@ redacted_prefs.delete(:dev_webserver)
 redacted_prefs.delete(:prod_webserver)
 redacted_prefs.delete(:templates)
 redacted_prefs.delete(:quiet_assets)
+redacted_prefs.delete(:better_errors)
 redacted_prefs.delete(:ban_spiders)
 redacted_prefs.delete(:jsruntime)
 redacted_prefs.delete(:rvmrc)
